# KAN-PyTorch

./: README.md  pyproject.toml
examples/ab/: bsplines.ipynb  main.ipynb
examples/sb/: bsplines.ipynb  grid_extension.ipynb  main.ipynb
torch_kan/: __init__.py  bsplines.py  kan.py  kan_layer.py
