[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_kan"
version = "0.0.1"
description = "KAN implementation in PyTorch"
authors = [
    { name = "Simon Bertrand", email = "simonbertrand.contact@gmail.com" },
]
maintainers = [
    { name = "Simon Bertrand", email = "simonbertrand.contact@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "KAN",
    "deep-learning",
    "kolmogorov",
    "arnold",
    "batched",
    "tensors",
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "torch>=2.2.1",
    "numpy==1.26.4",
]

[project.optional-dependencies]
tests = ["flake8==7.0.0", "isort==5.13.2", "black==24.1.1"]

[project.urls]
Repository = "https://github.com/Simon-Bertrand/KAN-PyTorch"

[tool.setuptools.packages.find]
include = ["torch_kan"]


[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
    "empty-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
